# CAD-modeling

./: CMakeLists.txt  README.md
src/: Common.h  Draw.cpp  EulerOperation.h  HalfEdge.h
